--- a/resources/globalConfiguration.json
+++ b/resources/globalConfiguration.json
@@ -12,11 +12,11 @@
     "telegramChatId": "UNKNOWN_ID"
   },
   "stages": {
-    "initSteps": true,
-    "sonarqube": true,
+    "initSteps": false,
+    "sonarqube": false,
     "bdd": false,
-    "syntaxCheck": false,
-    "edtValidate": false,
+    "syntaxCheck": true,
+    "edtValidate": true,
     "smoke": false,
     "email": false,
     "telegram": false
