--- a/resources/globalConfiguration.json
+++ b/resources/globalConfiguration.json
@@ -6,7 +6,7 @@
   "sourceFormat": "designer",
   "defaultBranch": "main",
   "secrets": {
-    "storagePath": "UNKNOWN_ID",
+    "storagePath": "extreme-sav_project1_STORAGE_USER",
     "storage": "UNKNOWN_ID",
     "telegramBotToken": "UNKNOWN_ID",
     "telegramChatId": "UNKNOWN_ID"
