--- a/resources/globalConfiguration.json
+++ b/resources/globalConfiguration.json
@@ -1,7 +1,7 @@
 {
   "$schema": "schema.json",
   "v8version": "8.3",
-  "edtVersion": "",
+  "edtVersion": "2022.2.5:x86_64",
   "srcDir": "src/cf",
   "sourceFormat": "designer",
   "defaultBranch": "main",
