--- a/resources/globalConfiguration.json
+++ b/resources/globalConfiguration.json
@@ -12,12 +12,12 @@
     "telegramChatId": "UNKNOWN_ID"
   },
   "stages": {
-    "initSteps": true,
-    "sonarqube": true,
-    "bdd": true,
-    "syntaxCheck": true,
-    "edtValidate": true,
-    "smoke": true,
+    "initSteps": false,
+    "sonarqube": false,
+    "bdd": false,
+    "syntaxCheck": false,
+    "edtValidate": false,
+    "smoke": false,
     "email": false,
     "telegram": false
   },
