--- a/resources/globalConfiguration.json
+++ b/resources/globalConfiguration.json
@@ -8,8 +8,8 @@
   "secrets": {
     "storagePath": "extreme-sav_jenkins-lib_STORAGE_PATH",
     "storage": "extreme-sav_project1_STORAGE_USER",
-    "telegramBotToken": "UNKNOWN_ID",
-    "telegramChatId": "UNKNOWN_ID"
+    "telegramBotToken": "",
+    "telegramChatId": ""
   },
   "stages": {
     "initSteps": false,
