--- a/resources/globalConfiguration.json
+++ b/resources/globalConfiguration.json
@@ -1,15 +1,15 @@
 {
   "$schema": "schema.json",
   "v8version": "8.3",
-  "edtVersion": "2022.2.5:x86_64",
-  "srcDir": "Управляемое_приложение_SQL/src",
+  "edtVersion": "",
+  "srcDir": "src/cf",
   "sourceFormat": "designer",
   "defaultBranch": "main",
   "secrets": {
-    "storagePath": "extreme-sav_jenkins-lib_STORAGE_PATH",
-    "storage": "extreme-sav_project1_STORAGE_USER",
-    "telegramBotToken": "",
-    "telegramChatId": ""
+    "storagePath": "UNKNOWN_ID",
+    "storage": "UNKNOWN_ID",
+    "telegramBotToken": "UNKNOWN_ID",
+    "telegramChatId": "UNKNOWN_ID"
   },
   "stages": {
     "initSteps": false,
